# hammers

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.rst  ccm-requirements.txt  clean_old_aggregates.py  docs-requirements.txt  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/workflows/: docker-image.yml
ccmanage/: lease.py  quicknode.py  secrets.py  server.py  ssh.py  stack.py
docs/: Makefile  make.bat
docs/source/: client-scripts.rst  conf.py  hammers-scripts.rst  helpers.rst  http-api.rst  index.rst  sql.rst
hammers/: __init__.py  diagnostics.py  interactive.py  mycnf.py  mysqlargs.py  mysqlshim.py  osapi.py  query.py  slack.py  util.py
hammers/notifications/: _email.py
hammers/notifications/templates/: no_reply_email_base.html  stacked_leases_deleted_email_body.html
hammers/osrest/: __init__.py  base.py  blazar.py  glance.py  ironic.py  keystone.py  neutron.py  nova.py  placement.py
hammers/scripts/: clean_old_aggregates.py  conflict_macs.py  curiouser.py  dirty_ports.py  enforce_retirement.py  floatingip_reaper.py  gpu_lease_stacking.py  ipmi_retry.py  ironic_error_resetter.py  k8s_calico_ip_cleanup.py  lease_stack_notifier.py  lease_stack_reaper.py  maintenance_reservation.py  metadata_sync.py  neutron_reaper.py  node_doctor.py  orphan_resource_providers.py  orphans_detector.py  reservation_usage_notification.py  undead_instances.py  unutilized_lease_reaper.py
hammers/scripts/tests/: lease-stacking-test-config.json  test_lease_notifier.py
